Fix drop down display on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -341,6 +341,13 @@ span.chance {
  **********************/
 
 @media only screen
+and (max-width: 820px) {
+  #selectBox {
+    font-size: 18px;
+  }
+}
+
+@media only screen
 and (max-width: 480px) { /* change to device width */
   header{
     width:100%;
@@ -355,7 +362,7 @@ and (max-width: 480px) { /* change to device width */
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
     column-count: 2;
-    }
+  }
 }
 
 @media only screen
